feat: Fix file locking, settings bugs, and cleanup code - Fix browser download errors by waiting for file release - Fix Settings window close button threading - Remove unused imports and dead code - Rebuild executable without console window

--- a/DownloadsSentinel/config/config.json
+++ b/DownloadsSentinel/config/config.json
@@ -22,6 +22,8 @@
     },
     "ai": {
         "model_name": "gemini-1.5-flash",
-        "local_url": "http://localhost:11434/v1/chat/completions"
+        "local_url": "http://localhost:11434/v1/chat/completions",
+        "enabled": true,
+        "cloud_warning_dismissed": false
     }
 }
